edit sidebar content

--- a/index.html
+++ b/index.html
@@ -37,12 +37,21 @@
           <div class="bg-light border-right" id="sidebar-wrapper">
             <div class="sidebar-heading">研究倫理委員會<br>申請暨審查系統</div>
             <div class="list-group list-group-flush">
-              <a href="#" class="list-group-item list-group-item-action bg-light">Dashboard</a>
-              <a href="#" class="list-group-item list-group-item-action bg-light">Shortcuts</a>
-              <a href="#" class="list-group-item list-group-item-action bg-light">Overview</a>
-              <a href="#" class="list-group-item list-group-item-action bg-light">Events</a>
-              <a href="#" class="list-group-item list-group-item-action bg-light">Profile</a>
-              <a href="#" class="list-group-item list-group-item-action bg-light">Status</a>
+              <li class="list-group-item list-group-item-primary">申請作業</li>
+              <a href="#" class="list-group-item list-group-item-action bg-light">新案</a>                
+              <a href="#" class="list-group-item list-group-item-action bg-light">變更案</a>
+              <a href="#" class="list-group-item list-group-item-action bg-light">持續審查</a>
+              <a href="#" class="list-group-item list-group-item-action bg-light">SAE</a>
+              <a href="#" class="list-group-item list-group-item-action bg-light">試驗偏差</a>
+              <a href="#" class="list-group-item list-group-item-action bg-light">結案、終止、撤案</a>
+              <a href="#" class="list-group-item list-group-item-action bg-light">其他</a>
+              <li class="list-group-item list-group-item-primary">審查作業</li>
+              <a href="#" class="list-group-item list-group-item-action bg-light">預審</a>                
+              <a href="#" class="list-group-item list-group-item-action bg-light">會議時程</a>
+              <a href="#" class="list-group-item list-group-item-action bg-light">會議記錄</a>
+              <li class="list-group-item list-group-item-primary">其他作業</li>
+              <a href="#" class="list-group-item list-group-item-action bg-light">待辦事項</a>                
+              <a href="#" class="list-group-item list-group-item-action bg-light">資料補件區</a>
             </div>
           </div>
           <!-- /#sidebar-wrapper -->
