Add label about counting waitting list.

--- a/index.html
+++ b/index.html
@@ -161,21 +161,27 @@
             <a href="./index.html"><div class="sidebar-heading">研究倫理委員會<br>申請暨審查系統</div></a>
             <div class="list-group list-group-flush">
               <li class="list-group-item list-group-item-primary">申請作業</li>
-              <a href="#" class="list-group-item list-group-item-action bg-light">新案</a>                
-              <a href="#" class="list-group-item list-group-item-action bg-light">變更案</a>
-              <a href="#" class="list-group-item list-group-item-action bg-light">持續審查</a>
-              <a href="#" class="list-group-item list-group-item-action bg-light">SAE</a>
-              <a href="#" class="list-group-item list-group-item-action bg-light">試驗偏差</a>
-              <a href="#" class="list-group-item list-group-item-action bg-light">結案、終止、撤案</a>
-              <a href="#" class="list-group-item list-group-item-action bg-light">其他</a>
+              <a href="#" class="list-group-item bg-light">新案</a>                
+              <a href="#" class="list-group-item bg-light">變更案</a>
+              <a href="#" class="list-group-item bg-light">持續審查</a>
+              <a href="#" class="list-group-item bg-light">SAE</a>
+              <a href="#" class="list-group-item bg-light">試驗偏差</a>
+              <a href="#" class="list-group-item bg-light">結案、終止、撤案</a>
+              <a href="#" class="list-group-item bg-light">其他</a>
               <li class="list-group-item list-group-item-primary">審查作業</li>
-              <a href="#" class="list-group-item list-group-item-action bg-light">預審</a>                
-              <a href="#" class="list-group-item list-group-item-action bg-light">會議時程</a>
-              <a href="#" class="list-group-item list-group-item-action bg-light">會議記錄</a>
+              <a href="#" class="list-group-item bg-light">預審</a>                
+              <a href="#" class="list-group-item bg-light">會議時程</a>
+              <a href="#" class="list-group-item bg-light">會議記錄</a>
               <li class="list-group-item list-group-item-primary">其他作業</li>
-              <a href="#" class="list-group-item list-group-item-action bg-light">待辦事項</a>                
-              <a href="#" class="list-group-item list-group-item-action bg-light">資料補件區</a>
-            </div>
+              <a href="#" class="list-group-item bg-light d-flex justify-content-between align-items-center">
+                  待辦事項
+                  <span class="badge badge-primary">5</span>
+              </a>                
+              <a href="#" class="list-group-item bg-light d-flex justify-content-between align-items-center">
+                  資料補件區
+                  <span class="badge badge-primary">3</span>
+              </a>
+            </div>    
           </div>
           <!-- /#sidebar-wrapper -->
       
