--- a/index.html
+++ b/index.html
@@ -175,11 +175,11 @@
               <li class="list-group-item list-group-item-primary">其他作業</li>
               <a href="#" class="list-group-item bg-light d-flex justify-content-between align-items-center">
                   待辦事項
-                  <span class="badge badge-primary">5</span>
+                  <span class="badge badge-danger">5</span>
               </a>                
               <a href="#" class="list-group-item bg-light d-flex justify-content-between align-items-center">
                   資料補件區
-                  <span class="badge badge-primary">3</span>
+                  <span class="badge badge-danger">3</span>
               </a>
             </div>    
           </div>
