--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       *{
         font-family: 微軟正黑體;
       }
+      #main-Content{
+        margin: 30px 10px;
+      }
         /* .bd-placeholder-img {
           font-size: 1.125rem;
           text-anchor: middle;
@@ -179,7 +182,7 @@
             <div class="container-fluid">
                
               
-              <div class="row">
+              <div class="row" id="main-Content">
                 <div class="col-2">
                     <!-- timeline -->
               <h3>案件歷程</h3>      
