adjust style of table.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       #main-Content{
         margin: 30px 10px;
       }
+      #table-container{
+        /* background-color: #ffd; */
+      }
         /* .bd-placeholder-img {
           font-size: 1.125rem;
           text-anchor: middle;
@@ -186,6 +189,7 @@
                 <div class="col-2">
                     <!-- timeline -->
               <h3>案件歷程</h3>      
+              <hr>
               <!-- <div id="timeline">-->
                 <div class="timeline-group">
                     <div class="timeline"></div>
@@ -235,9 +239,10 @@
                 
               <!-- timeline end-->
                 </div>
-                <div class="col-10">
+                <div class="col-10" id="table-container">
                   <h3>案件總覽</h3>
-                  <table class="table table-hover">
+                  <hr>
+                  <table class="table table-striped table-hover">
                     <thead>
                       <tr>
                         <th scope="col">#</th>
