add new column in the table about detail content of case.

--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
                         <th scope="col">計畫類別</th>
                         <th scope="col">案件狀態</th>
                         <th scope="col">下次追蹤日期</th>
+                        <th scope="col">詳細資訊</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -212,6 +213,7 @@
                         <td></td>
                         <td><a href="#" class="badge badge-danger">退回補件</a></td>
                         <td></td>
+                        <td><a href="#">詳細內容</a></td>
                       </tr>
                       <tr data-toggle="collapse" data-parent="timeline-parent" data-target="#timelineSet2" aria-expanded="false" aria-controls="timelineSet2">
                         <th scope="row">2</th>
@@ -222,6 +224,7 @@
                         <td></td>
                         <td><a href="#" class="badge badge-primary">行政審查中</a></td>
                         <td></td>
+                        <td><a href="#">詳細內容</a></td>
                       </tr>
                       <tr data-toggle="collapse" data-parent="timeline-parent" data-target="#timelineSet3" aria-expanded="false" aria-controls="timelineSet3">
                         <th scope="row">3</th>
@@ -232,6 +235,7 @@
                         <td></td>
                         <td><a href="#" class="badge badge-primary">待提交</a></td>
                         <td></td>
+                        <td><a href="#">詳細內容</a></td>
                       </tr>
                     </tbody>
                   </table>
